--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Roboto+Slab:wght@400;900&display=swap" rel="stylesheet">
+	
+	<!-- Inclusion du script JS pour faire marcher le dynamisme-->
+	
 </head>
+
 <body>
 <header class="container">
 	<h1>
