--- a/index.html
+++ b/index.html
@@ -24,8 +24,18 @@
 	<div id="banner">
 		<img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
 		<p>Impressions tous formats <span>en boutique et en ligne</span></p>
+
+		<!-- Début du code pour le carrousel -->
+
+		<!-- Ajouts des fleches -->
+			<img class="arrow_left arrow" src="./assets/images/arrow_left.png" alt="Flèche gauche du carrousel">
+			<img class="arrow_right arrow" src="./assets/images/arrow_right.png" alt="Flèche droite du carrousel">
+
+		
 		<div class="dots">
 		</div>
+
+		<!-- Fin du code pour le carrousel -->
 	</div>
 	<section id="about-us" class="container">
 		<div>
