Projet Print it complet

--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
 		<!-- Ajouts des fleches -->
 			<img class="arrow_left arrow" src="./assets/images/arrow_left.png" alt="Flèche gauche du carrousel">
 			<img class="arrow_right arrow" src="./assets/images/arrow_right.png" alt="Flèche droite du carrousel">
-
 		
-		<div class="dots">
+		<!-- Div destinées aux points sur le carroussel-->
+		<div class="dots" id="dots-container">
+
 		</div>
 
 		<!-- Fin du code pour le carrousel -->
